# smart-construction-site

./: .eslintignore  .eslintrc  .prettierignore  README.md  i18next-parser.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: build-vite.yaml  build.yaml  release.yaml
public/locales/zh/: translation.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  service.rs
src/apis/: config.ts  index.ts  pcc.ts  printJob.ts  printer.ts  printerEngine.ts  rip.ts  systemApi.ts
src/components/: AlertMessage.tsx  CustomCard.tsx  DraggablePrintItemList.tsx  LogStatus.tsx  PrintItem.tsx  PrintStatus.tsx  SimpleModal.tsx  StrictModeDroppable.tsx  TimeRangePicker.tsx  WeiGangLogo.tsx  index.tsx
src/components/ContentCard/: SubCard.tsx  SubCardTitle.tsx  index.tsx
src/components/Counter/: index.tsx
src/components/CustomComponents/: CusButton.tsx  CusCheckboxGroup.tsx  CusInput.tsx  CusLabel.tsx  CusLabelSimple.tsx  DynamicList.tsx  (+1 more)
src/config/: UniversalSX.tsx  index.tsx
src/context/: ImageEditorContext.tsx  MeteorConfigContext.tsx  PDCSettings.tsx  SnackbarContext.tsx  digitalInteractionContext.ts
src/hooks/: KeepAlive.tsx  context.ts  index.tsx  printer.ts
src/layouts/: BaseLayout.tsx
src/lib/: http.ts  i18n.ts
src/routers/: router.config.tsx  router.tsx
src/stores/: index.ts
src/types/: index.ts  meteorConfig.type.ts  router.type.tsx  tiff.d.ts
src/utils/: image.ts  index.ts  router.tsx  tokens.ts  tools.ts
(+128 files in other folders)
